# recon_2024_windbg_workshop

./: README.md  VM.wsb
Challenge/: unknown.sha1
Challenge/Solution/AreYouSure/ThereIsNoWayBack/OkHereItIs/: ttd_challenge.js
Demos/: EnumerateProcessCreationCallbacks.js
Demos/my_cpp_windbg_ext/: .gitignore  CMakeLists.txt  LICENSE
Demos/my_cpp_windbg_ext/src/: CMakeLists.txt  constants.hpp.in  lib.cpp
Demos/my_rust_windbg_ext/: Cargo.toml
Demos/my_rust_windbg_ext/src/: lib.rs
